[package]
name = "jellyfish"
version = "0.1.0"
authors = ["Hiroki Noda <kubo39@gmail.com>"]

[[bin]]
name = "httpd"
path = "src/bin/httpd.rs"

[[bin]]
name = "fsqual"
path = "src/bin/fsqual.rs"

[dependencies]
libc = "0.2.40"
scopeguard = "0.3.3"
linux_aio = { git = "https://github.com/kubo39/linux_aio", rev = "88c9c0b0d7c1307982235cda04827407df4c8c7d" }
